[gd_scene load_steps=2 format=3 uid="uid://c5748s1eke3oa"]

[ext_resource type="Script" uid="uid://cmsuog4o1xwqk" path="res://scripts/font_demo.gd" id="1_uju12"]

[node name="FontDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uju12")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "TURBO BREAKS FONT SHOWCASE"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Menu Font: Clean UI Text (Exo2)"

[node name="DialogueLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Dialogue Font: \"This is perfect for readable dialogue and descriptions.\" (Share Tech Mono)"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RacingLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "RACING FONT: SPEED & POWER (Michroma)"

[node name="RetroLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "RETRO FONT: 8-BIT ARCADE (Press Start 2P)"

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MonospaceLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "MONOSPACE: TECH DATA 12345 (Orbitron)"

[node name="TitleFontLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "TITLE FONT: BOLD HEADERS (Russo One)"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back to Lobby"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
